Fixed spacing in products page

--- a/web/templates/products.css
+++ b/web/templates/products.css
@@ -2,7 +2,7 @@
     display:inline-block;
     padding:0.35em 1.2em;
     border:0.1em solid #FFFFFF;
-    margin:0 0.3em 0.3em 0;
+    margin:0 0.3em 1em 1em;
     border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
